--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#6E1092" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="The Solution to Digital Technologies & Electronic Payments."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
